# fastapi-fullstack-todo

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
migrations/: env.py
migrations/versions/: 8cb2b04eb5b9_initial.py
routers/: auth.py  todos.py
templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  register.html
